--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello Coursera</title>
   </head>
   <body>
-    <h1>Hello Coursera Students GMO modificada!</h1>
+    <h1>Hello Coursera Students GMO modificada para Git hub!</h1>
   </body>
 </html>
